--- a/web/index.html
+++ b/web/index.html
@@ -37,6 +37,7 @@
   <script src="https://www.gstatic.com/firebasejs/9.15.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.15.0/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.15.0/firebase-storage.js"></script>
+
   <script>
     // The value below is injected by flutter build, do not touch.
     const serviceWorkerVersion = null;
@@ -49,15 +50,28 @@
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-app.js";
     import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-analytics.js";
 
+    //const firebaseConfig = {
+    //   apiKey: "AIzaSyBjgcsNlHKFZ-CJtXNAK4slslrUri3q9dU",
+    //   authDomain: "self-order-ca1c1.firebaseapp.com",
+    //   projectId: "self-order-ca1c1",
+    //   storageBucket: "self-order-ca1c1.firebasestorage.app",
+    //   messagingSenderId: "107557154609",
+    //   appId: "1:107557154609:web:5fa7274c181724d13e8a10",
+    //   measurementId: "G-NH8PS27XSR"
+    // };
+
     const firebaseConfig = {
-      apiKey: "AIzaSyBjgcsNlHKFZ-CJtXNAK4slslrUri3q9dU",
-      authDomain: "self-order-ca1c1.firebaseapp.com",
-      projectId: "self-order-ca1c1",
-      storageBucket: "self-order-ca1c1.firebasestorage.app",
-      messagingSenderId: "107557154609",
-      appId: "1:107557154609:web:5fa7274c181724d13e8a10",
-      measurementId: "G-NH8PS27XSR"
+      apiKey: "AIzaSyAvL70V85C4ripLXm7xCWpxH7xkXkq_eno",
+      authDomain: "mercadinho-632c0.firebaseapp.com",
+      projectId: "mercadinho-632c0",
+      storageBucket: "mercadinho-632c0.appspot.com",
+      messagingSenderId: "840564386914",
+      appId: "1:840564386914:web:af8be599b497b2aa6f753b",
+      measurementId: "G-YBWCNVVTS1"
     };
+
+
+
 
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
@@ -67,6 +81,21 @@
 
 <body>
   <script src="flutter_bootstrap.js" async></script>
+  <script>
+    window.addEventListener('load', function (ev) {
+      // Download main.dart.js
+      _flutter.loader.loadEntrypoint({
+        serviceWorker: {
+          serviceWorkerVersion: serviceWorkerVersion,
+        },
+        onEntrypointLoaded: function (engineInitializer) {
+          engineInitializer.initializeEngine().then(function (appRunner) {
+            appRunner.runApp();
+          });
+        }
+      });
+    });
+  </script>
 </body>
 
 </html>
